--- a/wp-cdn-es6/package.json
+++ b/wp-cdn-es6/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "webpack --config webpack.config.js",
+    "build0": "webpack --config webpack.config.js",
+    "build": "webpack --config webpack.config.es6.js && webpack --config webpack.config.es5.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -20,6 +21,7 @@
     "babel-preset-react": "^6.24.1",
     "dotenv-webpack": "^1.5.4",
     "html-webpack-plugin": "^2.30.1",
+    "script-ext-html-webpack-plugin": "^1.8.5",
     "webpack": "^3.6.0"
   }
 }
