--- a/wp-cdn-es6/package.json
+++ b/wp-cdn-es6/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "build0": "webpack --config webpack.config.js",
     "build": "webpack --config webpack.config.es6.js && webpack --config webpack.config.es5.js",
+    "start": "webpack-dev-server --open --config webpack.config.es5.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -22,6 +23,7 @@
     "dotenv-webpack": "^1.5.4",
     "html-webpack-plugin": "^2.30.1",
     "script-ext-html-webpack-plugin": "^1.8.5",
-    "webpack": "^3.6.0"
+    "webpack": "^3.6.0",
+    "webpack-dev-server": "^2.9.1"
   }
 }
