--- a/wp-cdn-es6/package.json
+++ b/wp-cdn-es6/package.json
@@ -7,6 +7,7 @@
     "build0": "webpack --config webpack.config.js",
     "build": "webpack --config webpack.config.es6.js && webpack --config webpack.config.es5.js",
     "start": "webpack-dev-server --open --config webpack.config.es5.js",
+    "serve": "serve build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -18,11 +19,13 @@
   "devDependencies": {
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
+    "babel-minify-webpack-plugin": "^0.2.0",
     "babel-preset-env": "^1.6.0",
     "babel-preset-react": "^6.24.1",
     "dotenv-webpack": "^1.5.4",
     "html-webpack-plugin": "^2.30.1",
     "script-ext-html-webpack-plugin": "^1.8.5",
+    "serve": "^6.2.0",
     "webpack": "^3.6.0",
     "webpack-dev-server": "^2.9.1"
   }
