--- a/docker1/crapp1/Dockerfile-dev
+++ b/docker1/crapp1/Dockerfile-dev
@@ -8,7 +8,8 @@ COPY ["package.json", "package-lock.json*", "./"]
 
 # If you're using yarn:
 #  yarn build
-RUN npm install --production --silent && mv node_modules ../
+# RUN npm install --production --silent && mv node_modules ../
+RUN npm install --production --silent
 
 # Expose PORT 3000 on our virtual machine so we can run our server
 EXPOSE 3000
