--- a/graphql/node-graphql-auth/package.json
+++ b/graphql/node-graphql-auth/package.json
@@ -6,7 +6,7 @@
   "dependencies": {
     "bcrypt": "3.0.2",
     "graphql": "^14.0.2",
-    "graphql-yoga": "1.16.7",
+    "graphql-yoga": "^1.17.4",
     "jsonwebtoken": "8.3.0",
     "prisma-client-lib": "^1.20.1"
   },
