--- a/testjs/package.json
+++ b/testjs/package.json
@@ -9,6 +9,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "lodash": "^4.17.15",
+    "mime-types": "^2.1.24",
+    "moment": "^2.24.0",
     "node-fetch": "^2.6.0"
   }
 }
