--- a/testjs/package.json
+++ b/testjs/package.json
@@ -9,9 +9,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "lambda-multipart-parser": "0.0.2",
     "lodash": "^4.17.15",
     "mime-types": "^2.1.24",
     "moment": "^2.24.0",
-    "node-fetch": "^2.6.0"
+    "node-fetch": "^2.6.0",
+    "parse-multipart": "^1.0.4"
   }
 }
