--- a/testjs/package.json
+++ b/testjs/package.json
@@ -14,6 +14,7 @@
     "mime-types": "^2.1.24",
     "moment": "^2.24.0",
     "node-fetch": "^2.6.0",
-    "parse-multipart": "^1.0.4"
+    "parse-multipart": "^1.0.4",
+    "uniqid": "^5.2.0"
   }
 }
