--- a/nodejs/esmodules/consumer-cjs/package.json
+++ b/nodejs/esmodules/consumer-cjs/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "deasync": "^0.1.21",
     "hello-cjs": "file:../hello-cjs",
     "hello-es6": "file:../hello-es6"
   }
